--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,19 +1,19 @@
 header {
-    display: flex;
     font-family: Verdana;
     font-size: 14px;
     font-weight: bold;
     align-items: center;
     width: 100%;
-    padding-bottom: 10px;
     border-bottom: 1px #000000 solid;
     position: fixed;
     z-index: 10;
     background-color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    top: 0px;
 }
 
 .logo{
-    display: flex;
     color: MediumAquamarine;
     padding-left: 40px;
     align-items: center;
@@ -26,7 +26,6 @@ header {
 
 .topnav{
     padding-right: 40px;
-    display: flex;
     justify-content: flex-end;
 }
 
@@ -46,20 +45,33 @@ header {
     width: 240px;
   }
 
-.maincontent, .largebottom, .imagediv, .contentimg1, .contentimg2, .contentimg3, h1{
+.maincontent, .largebottom, .imagediv, .contentimg1, .contentimg2, .contentimg3, h1, header, .logo, .topnav, .newbites, .bitespan, footer, .botinfo, .bottitle, .botnav{
     display: flex;
   }
 
 .imagediv{
     background-image: url("../images/img-story-main.png");
+    width: 600px;
+    height: 300px;
+    align-items: center;
+  }
+
+  .imagediv span{
+    margin-left: 15px;
   }
 
 .contentimg1{
     background-image: url("../images/img-story-2.png");
+    width: 300px;
+    height: 300px;
+    align-items: center;
   }
     
 .contentimg2{
     background-image: url("../images/img-story-3.png");
+    width: 300px;
+    height: 300px;
+    align-items: center;
 }
 
 .contentimg3{
@@ -84,6 +96,7 @@ p{
     font-weight: bold;
     font-size: 40px;
     color: white;
+    text-align: left;
 }
 
 .column.large, .column.medium, .column.small {
@@ -94,4 +107,87 @@ p{
 .maincontent{
     margin: 30px 60px 80px 60px;
     position: relative;
+    top: 70px;
+}
+
+.imgcontent{
+    text-align: center;
+}
+
+.largebottom1, .largebottom2, .contentimg3{
+    width: 300px;
+    height: 300px;
+    align-items: center;   
+}
+
+.largebottom1{
+    margin-right:30px;
+}
+
+.largebottom2{
+    margin-left:30px;
+}
+
+.content p{
+    height: 100px;
+    margin-bottom: 50px;
+}
+
+.mediumtop p{
+    margin-bottom: 50px;
+}
+
+.newbites{
+    flex-direction: column;
+}
+
+.bitespan{
+    margin: 0px;
+    background-color: WhiteSmoke;
+    font-family: Verdana;
+    font-size: 12px;
+    color: DimGray;
+    border-bottom: 1px solid #000000;
+    height: 40px;
+    align-items: center;
+    padding-left: 18px;
+}
+
+.smallcontent h2{
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+footer{
+    justify-content: center;
+    align-items: center;
+    background-color: MediumAquamarine;
+    margin: auto;
+    font-family: Verdana;
+    font-size: 12px;
+    flex-direction: column;
+    height: 280px;
+}
+
+.botinfo{
+    float: left;
+    margin-bottom: 12px;
+    width: 40   0px;
+}
+
+.bottitle{
+    font-family: Georgia;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    align-items: center;
+}
+
+.botnav{
+    padding-left: 20px;
+}
+
+.botnav span{
+    padding: 15px;
 }
